Pozmieniałam wygląd home i main, starałam się uporządkować ebyście wiedziały o co chodzi

--- a/ProjektGDE/2.html
+++ b/ProjektGDE/2.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Project: Gde2 </title>
+        <title>2</title>
+        <link rel="stylesheet" href="style.css">
         <style>
           body{
               background-color:RGB(29, 191, 164);
@@ -71,8 +72,8 @@
     </head>
     <body>
         <div class="hover">
-	<h1 id="jeden"><a href="Gde3.html">Olimpiady przedmiotowe (szkoły średnie)<a/></h1>
-        <h1 id="dwa"><a href="">Konkursy Kuratoryjne (szkoły podstawowe)</a></h1>
+	<h1 id="jeden"><a href="3.html">Olimpiady przedmiotowe <a/></h1>
+        <h1 id="dwa"><a href="">Konkursy kuratoryjne </a></h1>
 	<h2 id="trzy"><a href="">Lista konkursów i oimpiad<a/></h2>
 	<h2 id="cztery"><a href="">Rekrutacja<a/></h2>
         </div>
