--- a/ProjektGDE/GdeOlimpiadaBiol.html
+++ b/ProjektGDE/GdeOlimpiadaBiol.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Project: Gde3 </title>
+        <title> biologiczna </title>
+        <link rel="stylesheet" href="style.css">
         <style>
           body{
               background-color:RGB(29, 191, 164);
@@ -74,7 +75,7 @@
 	<h1 id="nagłówek"> Olimpiada Biologiczna </h1>
 	
 <div class="hover">
-	<h2 id="trzy"><a href="Gde2.html">Lista konkursów i oimpiad<a/></h2>
+	<h2 id="trzy"><a href="2.html">Lista konkursów i oimpiad<a/></h2>
 	<h2 id="cztery"><a href="">Rekrutacja<a/></h2>
 </div>
 	
