--- a/ProjektGDE/2.html
+++ b/ProjektGDE/2.html
@@ -27,12 +27,14 @@
         </aside>
 
         <main class="content">
+
             <div class="box">
-                <h2>Olimpiady przedmiotowe <br> (szkoły średnie)</h2>
+                
+                <a href="3.html">Olimpiady przedmiotowe <br> (szkoły średnie)<a/>
             </div>
 
             <div class="box">
-                <h2>Konkursy Kuratoryjne <br> (szkoły podstawowe)</h2>
+                <a href="3.html">Konkursy Kuratoryjne <br> (szkoły podstawowe)<a/>
             </div>
         </main>
     </div>
