--- a/ProjektGDE/lista_konkursow_i_olimpiad.html
+++ b/ProjektGDE/lista_konkursow_i_olimpiad.html
@@ -17,10 +17,10 @@
     <div class="container">
 
         <aside class="sidebar">
-            <img src="img/logo1.jpg" alt="Logo" class="logo">
+            <img src="img/logo_basic.png" alt="Logo" class="logo">
             <nav>
                 <ul>
-                    <li><a href="2.html" class="active">Lista konkursów i Olimpiad</a></li>
+                    <li><a href="lista_konkursow_i_olimpiad.html" class="active">Lista konkursów i Olimpiad</a></li>
                     <li><a href="#">Rekrutacja</a></li>
                 </ul>
             </nav>
@@ -30,11 +30,11 @@
 
             <div class="box">
                 
-                <a href="3.html">Olimpiady przedmiotowe <br> (szkoły średnie)<a/>
+                <a href="olimpiady_przedmiotowe.html">Olimpiady przedmiotowe <br> (szkoły średnie)<a/>
             </div>
 
             <div class="box">
-                <a href="3.html">Konkursy Kuratoryjne <br> (szkoły podstawowe)<a/>
+                <a href="#">Konkursy Kuratoryjne <br> (szkoły podstawowe)<a/>
             </div>
         </main>
     </div>
