--- a/ProjektGDE/main.html
+++ b/ProjektGDE/main.html
@@ -33,7 +33,7 @@
 
         
         <div class="box">
-            <h1><a href="">Rekrutacja</a></h1>
+            <h1><a href="rekrutacja.html">Rekrutacja</a></h1>
         
         </div>
 
