--- a/ProjektGDE/niezwalniajace_z_matury.html
+++ b/ProjektGDE/niezwalniajace_z_matury.html
@@ -33,6 +33,20 @@
             </div>
 
             <div class="list">
+                <a href="#">- Olimpiada Języka Łacińskiego </a>
+                <a href="#">- Olimpiada Solidarności </a>
+                <a href="#">- Olimpiada Wiedzy o Mleku i Mleczarstwie </a>
+                <a href="#">- Olimpiada Znajomości Afryki </a>
+                <a href="#">- Olimpiada Astronomiczna </a>
+                <a href="#">- Olimpiada Innowacji Technicznych i Wynalazczości </a> 
+                <a href="#">- Olimpiada Lingwistyki Matematycznej </a> 
+                <a href="#">- Olimpiada Logistyczna </a> 
+                <a href="#">- Olimpiada Prawosławnej Wiedzy Religijnej </a> 
+                <a href="#">- Olimpiada Przedsiębiorczości </a> 
+                <a href="#">- Olimpiada Techniki Samochodowej </a> 
+                <a href="#">- Olimpiada Teologii Katolickiej </a> 
+                <a href="#">- Olimpiada Wiedzy Ekologicznej </a> 
+                <a href="#">- Olimpiada Wiedzy Ekonomicznej </a>
 
  
 
