poprawki scrollowanie, ol biol4, a href-rekrutacja

--- a/ProjektGDE/niezwalniajace_z_matury.html
+++ b/ProjektGDE/niezwalniajace_z_matury.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="lista_konkursow_i_olimpiad.html" class="active">Lista konkursów i Olimpiad</a></li>
-                    <li><a href="#">Rekrutacja</a></li>
+                    <li><a href="rekrutacja.html">Rekrutacja</a></li>
                 </ul>
             </nav>
         </aside>
@@ -33,6 +33,8 @@
             </div>
 
             <div class="list">
+                <a href="#">- Olimpiada Wiedzy i Umiejętności Rolniczych </a>
+                <a href="#">- Olimpiada Wiedzy o Górnictwie i Hutnictwie </a>
                 <a href="#">- Olimpiada Języka Łacińskiego </a>
                 <a href="#">- Olimpiada Solidarności </a>
                 <a href="#">- Olimpiada Wiedzy o Mleku i Mleczarstwie </a>
