--- a/ProjektGDE/olimpiady_przedmiotowe.html
+++ b/ProjektGDE/olimpiady_przedmiotowe.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="lista_konkursow_i_olimpiad.html" class="active">Lista konkursów i Olimpiad</a></li>
-                    <li><a href="#">Rekrutacja</a></li>
+                    <li><a href="rekrutacja.html">Rekrutacja</a></li>
                 </ul>
             </nav>
         </aside>
