--- a/ProjektGDE/lista_konkursow_i_olimpiad.html
+++ b/ProjektGDE/lista_konkursow_i_olimpiad.html
@@ -17,7 +17,7 @@
     <div class="container">
 
         <aside class="sidebar">
-            <img src="img/logo_basic.png" alt="Logo" class="logo">
+            <img src="img/logonazwa.png" alt="Logo" class="logo">
             <nav>
                 <ul>
                     <li><a href="lista_konkursow_i_olimpiad.html" class="active">Lista konkursów i Olimpiad</a></li>
