Fix HTML structure and add search functionality with JSON data integration

--- a/ProjektGDE/lista_konkursow_i_olimpiad.html
+++ b/ProjektGDE/lista_konkursow_i_olimpiad.html
@@ -30,11 +30,11 @@
 
             <div class="box">
                 
-                <a href="olimpiady_przedmiotowe.html">Olimpiady przedmiotowe <br> (szkoły średnie)<a/>
+                <a href="olimpiady_przedmiotowe.html">Olimpiady przedmiotowe <br> (szkoły średnie)</a>
             </div>
 
             <div class="box">
-                <a href="#">Konkursy Kuratoryjne <br> (szkoły podstawowe)<a/>
+                <a href="#">Konkursy Kuratoryjne <br> (szkoły podstawowe)</a>
             </div>
         </main>
     </div>
